--- a/example/package.json
+++ b/example/package.json
@@ -17,6 +17,7 @@
     "@expo/metro-runtime": "~3.2.3",
     "date-fns": "^4.1.0",
     "expo": "~51.0.0",
+    "expo-camera": "~15.0.16",
     "expo-status-bar": "~1.12.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
