--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
   },
   "dependencies": {
     "date-fns": "^4.1.0",
-    "expo-av": "^16.0.7"
+    "expo-av": "^16.0.7",
+    "expo-camera": "^17.0.8"
   }
 }
