--- a/package.json
+++ b/package.json
@@ -11,6 +11,9 @@
   ],
   "scripts": {
     "build": "tsc",
+    "test": "jest",
+    "test:watch": "jest --watch",
+    "test:coverage": "jest --coverage",
     "prepublishOnly": "yarn build"
   },
   "keywords": [
@@ -26,9 +29,24 @@
     "react-native-svg": ">=13.0.0"
   },
   "devDependencies": {
+    "@babel/core": "^7.28.4",
+    "@babel/plugin-proposal-class-properties": "^7.18.6",
+    "@babel/plugin-transform-flow-strip-types": "^7.27.1",
+    "@babel/plugin-transform-private-methods": "^7.27.1",
+    "@babel/preset-env": "^7.28.3",
+    "@babel/preset-flow": "^7.27.1",
+    "@babel/preset-react": "^7.27.1",
+    "@babel/preset-typescript": "^7.27.1",
+    "@testing-library/react-native": "^12.4.3",
+    "@types/jest": "^29.5.11",
     "@types/react": "^19.1.17",
     "@types/react-native": "^0.73.0",
+    "babel-jest": "^30.2.0",
+    "jest": "^30.2.0",
+    "react": "18.2.0",
+    "react-native": "0.74.5",
     "react-native-svg": "^15.13.0",
+    "react-test-renderer": "18.2.0",
     "typescript": "^5.9.3"
   },
   "dependencies": {
