--- a/example/package.json
+++ b/example/package.json
@@ -8,6 +8,8 @@
     "web": "expo start --web --port 8083",
     "android": "expo start --android",
     "ios": "expo start --ios",
+    "server": "cd server && yarn start",
+    "dev": "concurrently \"yarn server\" \"yarn web\"",
     "test": "playwright test",
     "test:headed": "playwright test --headed",
     "test:ui": "playwright test --ui",
@@ -23,13 +25,15 @@
     "react-dom": "18.2.0",
     "react-native": "0.74.5",
     "react-native-svg": "15.2.0",
-    "react-native-web": "~0.19.10"
+    "react-native-web": "~0.19.10",
+    "ws": "^8.18.3"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
     "@playwright/test": "^1.40.0",
     "@types/react": "~18.2.45",
     "babel-preset-expo": "~11.0.0",
+    "concurrently": "^9.2.1",
     "typescript": "~5.3.3"
   },
   "private": true
