--- a/example/package.json
+++ b/example/package.json
@@ -5,7 +5,7 @@
   "main": "node_modules/expo/AppEntry.js",
   "scripts": {
     "start": "expo start",
-    "web": "expo start --web --port 8083",
+    "web": "expo start --web --port 4083",
     "android": "expo start --android",
     "ios": "expo start --ios",
     "server": "cd server && yarn start",
@@ -17,10 +17,12 @@
   },
   "dependencies": {
     "@expo/metro-runtime": "~3.2.3",
+    "@livekit/components-react": "^2.9.15",
     "date-fns": "^4.1.0",
     "expo": "~51.0.0",
     "expo-camera": "~15.0.16",
     "expo-status-bar": "~1.12.1",
+    "livekit-client": "^2.15.8",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.74.5",
