--- a/example/server/package.json
+++ b/example/server/package.json
@@ -8,14 +8,15 @@
     "dev": "nodemon mock-server.js"
   },
   "dependencies": {
-    "express": "^4.18.2",
-    "ws": "^8.14.2",
     "cors": "^2.8.5",
-    "uuid": "^9.0.1",
-    "joi": "^17.11.0",
-    "morgan": "^1.10.0",
+    "express": "^4.18.2",
+    "express-rate-limit": "^7.1.5",
     "helmet": "^7.1.0",
-    "express-rate-limit": "^7.1.5"
+    "joi": "^17.11.0",
+    "livekit-server-sdk": "^2.14.0",
+    "morgan": "^1.10.0",
+    "uuid": "^9.0.1",
+    "ws": "^8.14.2"
   },
   "devDependencies": {
     "nodemon": "^3.0.1"
