--- a/example/tsconfig.json
+++ b/example/tsconfig.json
@@ -2,6 +2,9 @@
   "extends": "expo/tsconfig.base",
   "compilerOptions": {
     "strict": false,
-    "skipLibCheck": true
+    "skipLibCheck": true,
+    "esModuleInterop": true,
+    "target": "ES2020",
+    "lib": ["ES2020", "DOM"]
   }
 }
